force-app/main/default/objects/Campaign/fields/Allow_Guests__c.field-meta.xml
<CustomField>
    <fullName>Allow_Guests__c</fullName>
    <label>Allow Guests</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>