force-app/main/default/objects/Campaign/fields/Gecko_Event_Category__c.field-meta.xml
<CustomField>
    <fullName>Gecko_Event_Category__c</fullName>
    <label>Gecko Event Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(SBCS) Biological Sciences</fullName>
            </value>
            <value>
                <fullName>(SBCS) Biomedical Science &amp; Central</fullName>
            </value>
            <value>
                <fullName>(SBCS) Chemical Science &amp; Central</fullName>
            </value>
            <value>
                <fullName>(SBCS) OH All subjects</fullName>
            </value>
            <value>
                <fullName>(SBCS) Psychology Online Webinars</fullName>
            </value>
            <value>
                <fullName>(SBCS) SEFP only</fullName>
            </value>
            <value>
                <fullName>(SEMS) OH All subjects</fullName>
            </value>
            <value>
                <fullName>(SPIR) - Preparing for your MA</fullName>
            </value>
            <value>
                <fullName>Academic Schools New Student Ambassador Training 2019</fullName>
            </value>
            <value>
                <fullName>April 2020 Campus Tour (Tuesday)</fullName>
            </value>
            <value>
                <fullName>CCLS webinar 2021</fullName>
            </value>
            <value>
                <fullName>Clearing Campus Tours 2021 (On campus)</fullName>
            </value>
            <value>
                <fullName>Clearing Campus Tours 2021 (Online)</fullName>
            </value>
            <value>
                <fullName>Clearing webinars 2020</fullName>
            </value>
            <value>
                <fullName>Conversion Events – China 2020</fullName>
            </value>
            <value>
                <fullName>Dentistry Talks - June 22</fullName>
            </value>
            <value>
                <fullName>Dentistry Talks - June 23</fullName>
            </value>
            <value>
                <fullName>Digital Campus Tours</fullName>
            </value>
            <value>
                <fullName>Discover 2020</fullName>
            </value>
            <value>
                <fullName>EECS: Academic Taster and Q+A Session</fullName>
            </value>
            <value>
                <fullName>EECS MSc Offer Holder Event 2021</fullName>
            </value>
            <value>
                <fullName>EECS OH 2021/22</fullName>
            </value>
            <value>
                <fullName>February Campus Tour (Friday)</fullName>
            </value>
            <value>
                <fullName>February Campus Tour (Thursday)</fullName>
            </value>
            <value>
                <fullName>February Campus Tour (Tuesday)</fullName>
            </value>
            <value>
                <fullName>Geog OH</fullName>
            </value>
            <value>
                <fullName>Geography OH Non OPA</fullName>
            </value>
            <value>
                <fullName>Geography OH OPA</fullName>
            </value>
            <value>
                <fullName>Global Health offer holder</fullName>
            </value>
            <value>
                <fullName>Go Abroad Fair October 2017</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>