force-app/main/default/objects/Campaign/fields/Gecko_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Gecko_Event_Type__c</fullName>
    <label>Gecko Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Event</fullName>
            </value>
            <value>
                <fullName>Single Session</fullName>
            </value>
            <value>
                <fullName>Multiple Sessions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>