force-app/main/default/objects/Campaign/fields/Gecko_Virtual_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Gecko_Virtual_Event_Type__c</fullName>
    <description>This field is created for Gecko and used to store the type of virtual event</description>
    <label>Gecko Virtual Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gecko Hosted</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>