force-app/main/default/objects/Campaign/fields/Waiting_List__c.field-meta.xml
<CustomField>
    <fullName>Waiting_List__c</fullName>
    <label>Waiting List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On</fullName>
            </value>
            <value>
                <fullName>Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>