force-app/main/default/objects/Campaign/fields/Webinar_Link__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Link__c</fullName>
    <description>This field is created for Gecko and used to store the link of the webniar</description>
    <label>Webinar Link</label>
    <type>Url</type>
</CustomField>