force-app/main/default/objects/Campaign/fields/Year_of_Entry__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Entry__c</fullName>
    <description>The Year of Entry the Campaign is targeted at</description>
    <label>Year of Entry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Year</valueSetName>
    </valueSet>
</CustomField>